# vega-engine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
OrionTracer/: CMakeLists.txt
OrionTracer/src/: main.cpp
VegaEngine/: CMakeLists.txt
VegaEngine/data/: config.json
VegaEngine/libs/console/: CMakeLists.txt
VegaEngine/libs/console/include/console/: console.h  format.h
VegaEngine/libs/console/src/: console.cpp
VegaEngine/libs/console/tests/: CMakeLists.txt  test_prints.cpp
VegaEngine/libs/math/: CMakeLists.txt
VegaEngine/libs/math/bench/: CMakeLists.txt  benchmark_integration.cpp
VegaEngine/libs/math/include/datatypes/math/: vec3.h
VegaEngine/libs/math/include/integration/math/: trapezium.h
VegaEngine/libs/math/src/integration/: trapezium.cpp
VegaEngine/libs/math/tests/: CMakeLists.txt  test_format.cpp  test_integration.cpp  test_vec3.cpp
VegaEngine/libs/timer/: CMakeLists.txt
VegaEngine/libs/timer/include/timer/: timer.h
VegaEngine/libs/timer/src/: timer.cpp
VegaEngine/libs/timer/tests/: CMakeLists.txt  test_timer.cpp
libs/math/: CMakeLists.txt
libs/math/bench/: benchmark_integration.cpp
libs/math/include/math/: vec3.h
libs/math/tests/: CMakeLists.txt  test_basics.cpp  test_integration.cpp  test_vec3.cpp
src/: main.cpp
